# fefu-os

./: .gitignore  LICENSE  README.md
lab1/: CMakeLists.txt  README.md
lab1/linux-mint/: build.sh  clean.sh
lab1/windows/: build.cmd  clean.cmd
lab2/: CMakeLists.txt  README.md  main.cpp
lab2/lib/: run_processes.cpp  run_processes.h
lab2/tests/: CMakeLists.txt  main.cpp
lab3/: CMakeLists.txt
lab3/include/: counter.h  logger.h  signal_handler.h  utils.h
lab3/include/process/: process.h  subprocessA.h  subprocessB.h
lab3/src/: counter.cpp  logger.cpp  main.cpp  signal_handler.cpp  temp.cpp  utils.cpp
lab3/src/process/: process.cpp  subprocessA.cpp
lab4/: CMakeLists.txt  README.md
lab4/include/: logger.h  temperature_reader.h
lab4/simulator/: CMakeLists.txt
lab4/simulator/include/: serial_port.h
lab4/simulator/src/: main.cpp  serial_port.cpp
lab4/src/: CMakeLists.txt  logger.cpp  main.cpp  temperature_reader.cpp
lab5/: CMakeLists.txt  README.md
lab5/client/public/: index.html
lab5/client/src/: api.ts  main.ts
lab5/include/: database.h  log_parser.h  server.h
lab5/src/: CMakeLists.txt  database.cpp  log_parser.cpp  main.cpp  server.cpp
utils/: git_pull.cmd  git_pull.sh
